# ot-harjoitustyo

./: .gitignore  README.md
bread-app/dokumentaatio/: recipeDataModel.json  tuntikirjanpito.md
bread-app/src/: recipe_manager.py  unit_converter.py
bread-app/src/entities/: recipe.py
dokumentaatio/: tuntikirjanpito.md  vaatimusmaarittely.md
epic-epoch-app/: pyproject.toml  tasks.py
epic-epoch-app/dokumentaatio/: changelog.md  supported_inputs.md  tuntikirjanpito.md  vaatimusmaarittely.md
epic-epoch-app/src/: index.py  input_reader.py  sketch.py  time_converter.py
epic-epoch-app/src/tests/: time_converter_test.py
laskarit/viikko1/: gitlog.txt
laskarit/viikko2/maksukortti/: pyproject.toml
laskarit/viikko2/maksukortti/src/tests/: maksukortti_test.py
laskarit/viikko2/unicafe/src/tests/: kassapaate_test.py  maksukortti_test.py
laskarit/viikko3/: monopoli.md  teht3_machine_sekvenssikaavio.md  teht4_matkakortti_sekvenssikaavio.md
viikko1/: gitlog.txt
