[tool.poetry]
name = "epic-epoch-app"
version = "0.1.0"
description = "\"Ohten harjoitustyö\""
authors = ["Miko Paajanen <miko.paajanen@gmail.com>"]
readme = "README.md"
packages = [{include = "epic_epoch_app"}]

[tool.poetry.dependencies]
python = "^3.8"
pytest = "^7.4.3"
invoke = "^2.2.0"


[tool.poetry.group.dev.dependencies]
pytest = "^7.2.2"
coverage = "^7.3.2"
pylint = "^3.0.2"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
